added carousel to the page

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ button, a{
     margin-bottom: 4.2rem;
 }
 
+.common-section{
+    padding: 0 0 7rem 0;
+}
+
 /* navbar styling */
 
 .nav-link{
@@ -152,6 +156,57 @@ button, a{
 .more-info-section .img-section img{
     width: 70%;
 }
+
+/*  */
+
+/* online-mode-section */
+
+.business-section{
+    padding-top: 3rem;
+}
+/*  */
+
+/* carousel section */
+
+    .carousel .card{
+        background-color:  #262631;
+        color: var(--bs-main-color);
+        transition: 0.3s linear;
+    }
+
+    .carousel-inner .card p{
+        color: var(--bs-main-color);
+    }
+
+    .carousel-inner .card:hover{
+        background: var(--bs-main-color);
+        color: var(--bs-dark-color);
+    }
+
+    .carousel-inner .card p:hover{
+        color: var(--bs-dark-color);
+    }
+
+    .fa-star{
+        color: var(--bs-supporting-color);
+    }
+
+    .carousel-indicators{
+        bottom: -20%;
+    }
+
+    .carousel-indicators [data-bs-target]{
+        width: 3rem;
+        height: 1rem;
+        background-color: var(--bs-secondary-colors);
+    }
+/*  */
+
+/* expert panel */
+
+    .text-grey{
+        color: var(--bs-primary-color);
+    }
 
 /*  */
 
