--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,10 @@ h1, h2,h3,h4,h5{
 }
 
 h1{
-    font-size: 3.8rem;
+    font-size: 3.3rem;
+    /* word-spacing: 1rem; */
 }
-
+hover
 h2{
     line-height: 4rem;
     font-weight: 600;
@@ -70,6 +71,12 @@ button, a{
 
 .common-section{
     padding: 0 0 7rem 0;
+}
+
+.bg-theme{
+    color: var(--bs-supporting-color);
+    font-weight: bold;
+    background-image: none;
 }
 
 /* navbar styling */
@@ -183,8 +190,9 @@ button, a{
         color: var(--bs-dark-color);
     }
 
-    .carousel-inner .card p:hover{
+    .carousel-inner .card:hover p{
         color: var(--bs-dark-color);
+        font-weight: 600;
     }
 
     .fa-star{
@@ -210,6 +218,60 @@ button, a{
 
 /*  */
 
+/* contact styling section */
+
+.contact-section{
+    position: relative;
+}
+
+.custom-shape-divider-top-1726500951 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1726500951 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 150px;
+}
+
+.custom-shape-divider-top-1726500951 .shape-fill {
+    fill: #FFFFFF;
+}
+
+.contact-section .common-title{
+    padding-top: 6rem;
+}
+
+.contact-section .form-section{
+    width: 50%;
+}
+
+/*  */
+
+/* footer section */
+
+    .main-footer-section{
+        padding: 0 0 4rem 0;
+        color: var(--bs-main-color);
+    }
+
+    .contact-div{
+        background-color: #363636
+    }
+
+    .icon-div{
+        width: 5rem;
+        height: 5rem;
+    }
+
+/*  */
+
 .custom-shape-divider-bottom-1726304980 {
     position: absolute;
     bottom: 0;
@@ -224,9 +286,66 @@ button, a{
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 149px;
+    height: 150px;
 }
 
 .custom-shape-divider-bottom-1726304980 .shape-fill {
     fill: #FFFFFF;
+}
+
+
+@media screen and (max-width : 1200px){
+    .hero-video--section{
+        width: 20rem;
+        border-radius: 1rem;
+    }
+}
+
+@media screen and (max-width: 998px) {
+
+    h1{
+        font-size: 2.4rem;
+    }
+
+    .common-heading.heading{
+        line-height: 3rem;
+    }
+
+    section .common-heading{
+        font-size: 2rem;
+    }
+
+    section  .para-width{
+        width:  auto;
+    }
+
+    .hero-section{
+        height: 100vh;
+    }
+
+    .navbar-toggler{
+        border-color: var( --bs-main-color);
+    }
+
+    .navbar-toggler-icon{
+        background-color: var( --bs-main-color);
+    }
+
+    .h2{
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+    }
+
+    .more-info-section{
+        text-align: center;
+    }
+
+    .carousel .carousel-indicators{
+        bottom: -8%;
+    }
+
+    
+    .contact-us-btn{
+        margin-left: 5rem;
+}
 }
